# humanagent-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
humanagent/: .gitignore  CHANGELOG.md  Filename: README.md  LICENSE  __init__.py  client.py  exceptions.py  pyproject.toml  setup.py
humanagent/tests/: test_client.py
tests/: test_client.py
