[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "humanagent"
version = "0.1.0"
description = "Human checkpoint infrastructure for AI workflows"
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://humanagent.net"
Repository = "https://github.com/SimonSliman/humanagent-python"
