[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanagent"
version = "0.1.0"
description = "Human checkpoint infrastructure for AI workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
authors = [{name = "Simon Sliman Du Sable"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://humanagent.net"
Repository = "https://github.com/SimonSliman/humanagent-python"
